feat: openapi for GET assets
