# pkg/generated/goserver/api_assets_service.go
@@ -1,0 +1,49 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Diary - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"context"
+	"errors"
+	"net/http"
+)
+
+// AssetsAPIService is an interface that defines the logic for the AssetsAPIServicer
+type AssetsAPIService interface {
+	// GetAsset - return asset by path
+	GetAsset(ctx context.Context, path string) (ImplResponse, error)
+}
+
+// AssetsAPIService is a service that implements the logic for the AssetsAPIServicer
+// This service should implement the business logic for every endpoint for the AssetsAPI API.
+// Include any external packages or services that will be required by this service.
+type AssetsAPIServiceImpl struct {
+}
+
+// NewAssetsAPIService creates a default api service
+func NewAssetsAPIService() AssetsAPIService {
+	return &AssetsAPIServiceImpl{}
+}
+
+// GetAsset - return asset by path
+func (s *AssetsAPIServiceImpl) GetAsset(ctx context.Context, path string) (ImplResponse, error) {
+	// TODO - update GetAsset with the required logic for this service method.
+	// Add api_assets_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(200, *os.File{}) or use other options such as http.Ok ...
+	// return Response(200, *os.File{}), nil
+
+	// TODO: Uncomment the next line to return response Response(404, {}) or use other options such as http.Ok ...
+	// return Response(404, nil),nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("GetAsset method not implemented")
+}
